k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: borgos
  labels:
    name: borgos
    environment: production
